--- a/module/Application/view/application/buscar/index.phtml
+++ b/module/Application/view/application/buscar/index.phtml
@@ -4,13 +4,38 @@
     {
        $('#filtro').val($.getParameter('filtro',$(location).attr('href')).toString().replace('+',' ')); 
        pageSize = $.getParameter('pageSize',$(location).attr('href'));
-       $("#btnPageSize").html(pageSize);
+       $(".btnPageSize").html(pageSize);
     });
 </script>
+
+<?php 
+/*
+ *  Genera la paginación
+ */
+    $pagination = "";
+    $class = "active";
+    // el numero de la pagina activa
+    $pageNumActive = $_GET['pageNumber'] == null? 1:$_GET['pageNumber'];
+    // Se visualiza el boton de anterior si es necesario
+    if($pageNumActive > 1){
+        $pagination = "<li><a onclick=\"buscarProductosEnTienda($('#btnPageSize').html(),".($pageNumActive-1).",'".$this->basePath()."')\"><i class='fa fa-angle-left'></i></a></li>";
+    }
+    for($i=1;$i<=$this->pageCount;$i++) {
+        $class ="";
+        if ($this->pageNumber == $i)
+            $class = "active";
+        $pagination .= "<li class='".$class."'><a onclick=\"buscarProductosEnTienda($('#btnPageSize').html(),".$i.",'".$this->basePath()."')\">$i</a></li>";
+    }
+    // Se visualiza el boton de siguiente si es necesario
+    if ($pageNumActive < $this->pageCount) {
+        $pagination .= "<li><a onclick=\"buscarProductosEnTienda($('#btnPageSize').html(),".($pageNumActive+1).",'".$this->basePath()."')\"><i class='fa fa-angle-right'></i></a></li>";
+    }
+?>
 <div class="row">
    <div class="col-md-12">
       <div class="row">
          <div class="col-md-9 col-sm-8 col-xs-12 main-content">
+             
             <!--div id="category-header" class="category-banner">
                <img src="<?php echo $this->basePath() ?>/public/images/banner.png" alt="Category banner" class="img-responsive">
                <div class="category-title">
@@ -24,7 +49,51 @@
             <div class="md-margin"></div>
             <!-- space -->
             <div class="category-toolbar clearfix">
-              
+              <div class="toolbox-filter clearfix">
+									
+                <div class="sort-box">
+                    <span class="separator">sort by:</span>
+                    <div class="btn-group select-dropdown">
+                        <button type="button" class="btn select-btn">Position</button>
+                        <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                            <i class="fa fa-angle-down"></i>
+                        </button>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#">Date</a></li>
+                            <li><a href="#">Name</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="view-box">
+                    <a href="category.html" class="active icon-button icon-grid"><i class="fa fa-th-large"></i></a>
+                    <a href="category-list.html" class="icon-button icon-list"><i class="fa fa-th-list"></i></a>
+                </div><!-- End .view-box -->
+
+                </div><!-- End .toolbox-filter -->
+                <div class="toolbox-pagination clearfix">
+                <ul class="pagination">
+                    <?php 
+                        echo $pagination;
+                    ?>
+                </ul>
+                <div class="pull-right view-count-box hidden-xs">
+                    <span class="separator">view:</span>
+                    <div class="btn-group select-dropdown">
+                        <button type="button" class="btn select-btn btnPageSize" id="btnPageSize"></button>
+                        <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+                            <i class="fa fa-angle-down"></i>
+                        </button>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a onclick="buscarProductosEnTienda(10,1,'<?php echo $this->basePath()?>')">10</a></li>
+                            <li><a onclick="buscarProductosEnTienda(15,1,'<?php echo $this->basePath()?>')">15</a></li>
+                            <li><a onclick="buscarProductosEnTienda(30,1,'<?php echo $this->basePath()?>')">30</a></li>
+                       </ul>
+                    </div>
+                </div>
+
+                </div><!-- End .toolbox-pagination -->
+        							
             </div>
             <!-- End .category-toolbar -->
             <div class="md-margin"></div>
@@ -75,11 +144,8 @@
                                              <span class='icon-cart-text'>Add to Cart</span>
                                              </a>
                                           </div>
-
                                        </div>
-
                                     </div>
-
                                  </div>";
                         }
                     ?>
@@ -110,30 +176,16 @@
                 </div>
                <div class="pull-right">
                   <ul class="pagination">
-                      <?php 
-                        $class = "active";
-                        for($i=1;$i<=$this->pageCount;$i++)
-                        {
-                            $class ="";
-                            if ($this->pageNumber == $i)
-                                $class = "active";
-                            
-                            echo "<li class='".$class."'><a onclick=\"buscarProductosEnTienda($('#btnPageSize').html(),".$i.",'".$this->basePath()."')\">$i</a></li>";
-                        }
-                      ?>
-                     <!--li class="active"><a href="#">1</a></li>
-                     <li><a href="#">2</a></li>
-                     <li><a href="#">3</a></li>
-                     <li><a href="#">4</a></li>
-                     <li><a href="#">5</a></li>
-                     <li><a href="#"><i class="fa fa-angle-right"></i></a></li--!>
+                        <?php 
+                            echo $pagination;
+                        ?>
                   </ul>
                </div>
                <!-- End .pull-right -->
                 <div class="pull-right view-count-box hidden-xs">
                     <span class="separator">view:</span>
                     <div class="btn-group select-dropdown">
-                        <button type="button" class="btn select-btn" id="btnPageSize"></button>
+                        <button type="button" class="btn select-btn btnPageSize" id="btnPageSize"></button>
                         <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
                             <i class="fa fa-angle-down"></i>
                         </button>
