--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -290,6 +290,7 @@ if (defined('RUNNING_FROM_ROOT')) {
                                  <div class="form-group">
                                      <!-- Campo para iniciar el tamaño de la pagina en 10 -->
                                      <input type="hidden" name="pageSize" value="10">
+                                     <input type="hidden" name="pageNumber" value="1">
                                      <input type="text" name="filtro" id="filtro" class="form-control" placeholder="Buscar en la tienda">
                                  </div>
                                  <!-- End .form-inline -->
